--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 
 <style>
     BODY{
-    cursor:url("cursor.png"), default;
+    cursor:url("https://extort.lol/cross.png"), default;
     }
 </style>
